--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 apply plugin: "realm-android"
 
@@ -53,6 +54,7 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
     apply plugin: 'kotlin-android-extensions'
 
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -69,4 +71,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    //test
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
