--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
     }
+}
 
 
 realm {
